# RAG-memory

./: .gitignore  Exercicios.txt  README.md  app.py  augmentation.py  docker-compose.yml  generation.py  gerar.py  main.py  memory.py  pyproject.toml  read_files.py  retriever.py  semantic_encoder.py
markdown/: 2111.01888v1.md  2205.10851v1.md  Adaptive_Inattentional_Framework_for_Video_Object_Detection_With_Reward-Conditional_Training.md  Bird Detection Grand Challenge.md  DDOS.md  Sim2Air - Synthetic Aerial Dataset for UAV.md  SynDroneVision- A Synthetic Dataset for Image-Based Drone Detection.md  Thermal Drone.md  Unmanned Aerial Vehicles Dataset.md  YOLO-Feder_Fusionnet_A_Novel_Deep_Learning_Architecture_for_Drone_Detection.md  ai-03-00016-v2.md  electronics-12-02197.md
